; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_sysfs.c_show_configuration_string.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_sysfs.c_show_configuration_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.usb_device = type { %struct.usb_host_config* }
%struct.usb_host_config = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @show_configuration_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_configuration_string(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.usb_device*, align 8
  %9 = alloca %struct.usb_host_config*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.device*, %struct.device** %5, align 8
  %11 = call %struct.usb_device* @to_usb_device(%struct.device* %10)
  store %struct.usb_device* %11, %struct.usb_device** %8, align 8
  %12 = load %struct.usb_device*, %struct.usb_device** %8, align 8
  %13 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %12, i32 0, i32 0
  %14 = load %struct.usb_host_config*, %struct.usb_host_config** %13, align 8
  store %struct.usb_host_config* %14, %struct.usb_host_config** %9, align 8
  %15 = load %struct.usb_host_config*, %struct.usb_host_config** %9, align 8
  %16 = icmp ne %struct.usb_host_config* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %3
  %18 = load %struct.usb_host_config*, %struct.usb_host_config** %9, align 8
  %19 = getelementptr inbounds %struct.usb_host_config, %struct.usb_host_config* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %17, %3
  store i32 0, i32* %4, align 4
  br label %29

23:                                               ; preds = %17
  %24 = load i8*, i8** %7, align 8
  %25 = load %struct.usb_host_config*, %struct.usb_host_config** %9, align 8
  %26 = getelementptr inbounds %struct.usb_host_config, %struct.usb_host_config* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @sprintf(i8* %24, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %23, %22
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.usb_device* @to_usb_device(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
